<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yummy</string>
    <string name="Your_API_KEY" translatable="false">AIzaSyB9v2vE1hC-ojehepfnkcCSwBp6BLVTsN4</string>
    <string name="api_key_map" translatable="false">AIzaSyC0pWEQijgfqgJecVJVMaF6a1wXpUgmj78</string>
    <string name="YOUR_CLIENT_ID" translatable="false">b5e2860524646bb</string>
    <string name="welcome">Welcome to Yummy</string>
    <string name="loading">Loading…</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="information">Information</string>
    <string name="cred_verify_input_user_label">Your email address</string>
    <string name="cred_verify_input_pass_label">Yout password</string>
    <string name="register_text">Sign in</string>
    <string name="sso_facebook_ad" translatable="false">Facebook</string>
    <string name="sso_google_ad" translatable="false">Google</string>
    <string name="sso_phone">Phone</string>
    <string name="sign_other">or sign in with</string>
    <string name="policy_message">By using this software, you agree to our \n<u><b>Terms of Use</b></u> and <u><b>Privacy Policy</b></u>.</string>
    <string name="policy_main">By using  this software, you agree to these \n Term Of Use &amp; Privacy Policy</string>
    <string name="version_register" translatable="false">Version 3.2.135</string>
    <string name="rta_policy">Privacy Policy</string>
    <string name="rta_termsofuse">Terms of Use</string>
    <string name="popular">Popular</string>
    <string name="blog">Blog</string>
    <string name="nearby">Nearby</string>
    <string name="discount">Discount</string>
    <string name="product">Product</string>
    <string name="Exp">Suggestion</string>
    <string name="more">Dessert</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="cake">Cake</string>
    <string name="fruits">Fruits</string>
    <string name="vegetarian_food">Vegetarian</string>
    <string name="handmade">Handmade</string>
    <string name="snack">Snack</string>
    <string name="forget_pas">Forget password?</string>
    <string name="create_user">Create new user</string>
    <string name="signup">Sign Up</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="empty_user">Please complete all information!</string>
    <string name="wrong_pass">Password does not match!</string>
    <string name="request_pass">Passwords must be at least 6 characters!</string>
    <string name="failed_register">Authentication failed!</string>
    <string name="success_register">Authentication successful!</string>
    <string name="open_setting_wifi">Tap icon to open wifi setting</string>
    <string name="disconnected">Disconnected</string>
    <string name="fragment_user">Account</string>
    <string name="notification">Notification</string>
    <string name="distinct">Distinct</string>
    <string name="login_please">Log in to your Yummy account</string>
    <string name="intro_account">Sync your list, likes and history</string>
    <string name="history_user">History</string>
    <string name="address_user">Address</string>
    <string name="setting_user">Settings</string>
    <string name="phone_login">Phone Login</string>
    <string name="send_code">Send Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="code" translatable="false">Code</string>
    <string name="verifyCode">VerifyCode</string>
    <string name="ongoing">Ongoing</string>
    <string name="no_order">No Order</string>
    <string name="contect_order">Find menu and place for order.\nWe \'re ready to serve you </string>
    <string name="comment" tools:ignore="ExtraTranslation">Comments</string>
    <string name="menu">Menu</string>
    <string name="image">Images</string>
    <string name="review">Reviews</string>
    <string name="open_time">OPENING</string>
    <string name="city">Province/City</string>
    <string name="close">CLOSED</string>
    <string-array name="text">
        <item>Loading</item>
        <item>Loading</item>
    </string-array>
    <string name="freeship">Freeship</string>
    <string name="search_city">Search province, city name</string>
    <string name="search_res">Search restaurant name, address</string>
    <string name="search_location">Enter address</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="user_info">User Information</string>
    <string name="numberphone">Number Phone</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="birth">Date of Birth</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="history_address">Address History</string>
    <string name="account_setting">Account Settings</string>
    <string name="app_setting">App Settings</string>
    <string name="avatar">Avatar</string>
    <string name="information_contact">Information &amp; Contact</string>
    <string name="pass">Password</string>
    <string name="change_lang">Change Language</string>
    <string name="login_first">You need to login to app. Please Login!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="none">None</string>
    <string name="info_account">Welcome you to join Yummy app</string>
    <string name="error_change_address">Can\' t change address. Please check the entered address again!</string>
    <string name="app_language">App Language</string>
    <string name="vietname">Vietnamese</string>
    <string name="english">English</string>
    <string name="cancel">Cancel</string>
    <string name="change_pass_suc">Password Successfully Modified</string>
    <string name="change_pass_fail">Something went wrong. Please try again later</string>
    <string name="reset_pass_succ">Reset password instructions has sent to your email</string>
    <string name="reset_pass_fail">Email don\'t exist</string>
    <string name="old_pass">Old password</string>
    <string name="confirm">Confirm</string>
    <string name="enter_current_pass">Enter Current Password</string>
    <string name="reset_pass">Please enter your email in the box below, we will send a new password to your inbox</string>
    <string name="enter_new_pass">Enter New Password</string>
    <string name="re_enter_pass">Re-Enter Password</string>
    <string name="error_change_pass">Wrong password.</string>
    <string name="error_change_avatar">Can\'t change avatar. Please try again later!</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_sign_out">Do you want to sign out?</string>
    <string name="sign_out">Sign out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="complete">Complete</string>
    <string name="delete_question">Do you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="error">Error!</string>
    <string name="not_change_pass">You can\'t change you password!</string>
    <string name="delevery">Delivery</string>
    <string name="delivery_to">Delivery to</string>
    <string name="pick_up_outside">Pick up outside</string>
    <string name="delivery_at">Delivery at</string>
    <string name="Total">Total</string>
    <string name="total_item">Total Items</string>
    <string name="item">items</string>
    <string name="recipient">Recipient</string>
    <string name="nodes">  Node</string>
    <string name="edit">Edit</string>
    <string name="submit_order">Submit Order</string>
    <string name="ship_fee">Ship fee: </string>
    <string name="order_success">You have successfully ordered! Please wait for confirmation!</string>
    <string name="discount_code">Discount code</string>
    <string name="okay">OK</string>
    <string name="warning">Warning</string>
    <string name="mess_warning">If you do not allow the app to access your current location, the app will be closed!\nDo you want to re-authorize?</string>
    <string name="on_sent">Your order is waiting for confirmation</string>
    <string name="on_confirm">The store is preparing</string>
    <string name="on_dispatch">The restaurant has dispatched your order</string>
    <string name="on_complete">Your order has arrived at your address</string>
    <string name="on_cancel">Your order has canceled because of some reasons!</string>
    <string name="sent">SENT</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="enroute">EN ROUTE</string>
    <string name="delivered">DELIVERED</string>
    <string name="thank_order">We will finish delivery soonest for you! Thank you!</string>
    <string name="cash">Cash</string>
    <string name="write_review">Write review</string>
    <string name="post">Post</string>
    <string name="title">Title (optional)</string>
    <string name="content">Please review more than 100 words, do not spam… to get reward points!</string>
    <string name="rating">Required Rating</string>
    <string name="success">Success!!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="order">Order</string>
    <string name="branch">Branch</string>
    <string name="mess_delete">Do you want to delete?</string>
    <string name="mess_close">Do you want to close?</string>
    <string name="mess_open">Do you want to open?</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="menu_name">Enter Food\'s name</string>
    <string name="menu_price">Enter Food\'s price</string>
    <string name="menu_des">Enter Describe\'s name (optional)</string>
    <string name="your_profile">Enter Your Profile</string>
    <string name="login_again">Please log in again!</string>
    <string name="reset_suc">Send email successfully!</string>
    <string name="reset_fail">Invalid email!</string>
    <string name="cmnd">Identity Card</string>
    <string name="bank">Bank</string>
    <string name="stk">Account Number</string>
    <string name="owner">Owner</string>
    <string name="bank_account">Bank account</string>
    <string name="add_menu">Add menu</string>
    <string name="add">Add</string>
    <string name="type_menu">Enter Type\'s menu</string>
    <string name="img_first">Please enter the information first!</string>
    <string name="restaurant">Restaurant</string>
    <string name="edit_dis">Edit Discount</string>
    <string name="edit_res">Edit Restaurant</string>
    <string name="max_discount">Max discount</string>
    <string name="min_order">Min order</string>
    <string name="add_branch">Add Branch</string>
    <string name="address_branch">Enter  fill in the complete address\'s branch</string>
    <string name="twice_exit">Please click BACK again to exit!</string>
    <string name="date">Date</string>
    <string name="mess_change_status">Are you sure of the next process?</string>
    <string name="mess_cancel_status">Are you sure cancel this order?</string>
    <string name="create_res">Create new restaurant</string>
    <string name="name_res">Restaurant names</string>
    <string name="time_open">Open time</string>
    <string name="close_time">Close time</string>
    <string name="fee_enter">Enter feeship (VND/1km)</string>
    <string name="type">Type menu</string>
    <string name="enter_video">Enter link video (get link on Youtube)</string>
    <string name="create">Create</string>
    <string name="video">Video</string>
</resources>