<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/tab_history"
        android:enabled="true"
        android:icon="@drawable/icon_history"
        android:title="@string/history"
        app:showAsAction="always" />
    <item
        android:id="@+id/tab_bell"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/tab_info"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/information"
        app:showAsAction="always" />
</menu>