<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    android:padding="8dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_english"
            android:textSize="16sp"
            android:text="@string/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio_vietnamese"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="@string/vietname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/btn_cancel"
        android:textSize="16sp"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>