<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:text="@string/confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:text="@string/are_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_marginTop="16dp"
       android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_signout"
            android:paddingRight="12dp"
            android:textSize="16sp"
            android:text="@string/sign_out"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/btn_no"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="@string/no"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>