<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="serif-monospace"
            android:text="@string/create_res"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:textSize="14sp"
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_ed_register"
            android:fontFamily="sans-serif"
            android:hint="@string/name_res"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/btn_exit"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/city"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/rcv_city"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.4"
                android:text="@string/time_open"
                android:textSize="16sp"
                android:layout_gravity="end|center_vertical"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/bg_square_yellow"
                android:layout_weight="0.6"
                android:textSize="14sp"
                android:id="@+id/tv_open"
                android:text="00-00-0000"
                android:layout_width="0dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.4"
                android:text="@string/close_time"
                android:textSize="16sp"
                android:layout_gravity="end|center_vertical"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/bg_square_yellow"
                android:layout_weight="0.6"
                android:textSize="14sp"
                android:id="@+id/tv_close"
                android:text="00-00-0000"
                android:layout_width="0dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:text="@string/freeship"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radioGrp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:checked="true"
                android:id="@+id/rdb_no"
                android:textSize="14sp"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rdb_yes"
                android:textSize="14sp"
                android:text="@string/no"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <EditText
            android:textSize="14sp"
            android:visibility="gone"
            android:id="@+id/ed_ship"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_ed_register"
            android:fontFamily="sans-serif"
            android:hint="@string/fee_enter"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingLeft="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/btn_exit"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_weight="0.4"
            android:text="@string/type"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/rcv_type"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/video"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:textSize="14sp"
            android:id="@+id/edt_video"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_ed_register"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_video"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/btn_exit"/>

        <Button
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_gravity="bottom|center_horizontal"
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/btn_register"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/create"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>