<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_close_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/pass"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize" />

        <TextView
            android:textColor="@color/colorAccent"
            android:layout_marginRight="8dp"
            android:id="@+id/tv_save"
            android:text="@string/save"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/searchbox_hint_text_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <RelativeLayout
        android:padding="8dp"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_email"
            android:text="lethithaonhi999@gmail.com"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        android:background="@color/searchbox_hint_text_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:layout_margin="8dp"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:layout_weight="0.3"
            android:text="@string/old_pass"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/ed_curent_pass"
            android:textSize="14sp"
            android:hint="@string/enter_current_pass"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/searchbox_hint_text_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:layout_margin="8dp"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:layout_weight="0.3"
            android:text="@string/new_pass"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/ed_new_pass"
            android:textSize="14sp"
            android:hint="@string/enter_new_pass"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/searchbox_hint_text_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:layout_margin="8dp"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:layout_weight="0.3"
            android:text="@string/confirm"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/ed_re_pass"
            android:textSize="14sp"
            android:hint="@string/re_enter_pass"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar"
        android:visibility="gone"
        android:id="@+id/progress_circular"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>