<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:padding="28dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="280dp"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="sans-serif"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/mess_change_status"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/okay"
                android:background="@color/green_white"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_check_circle_24dp"
            android:layout_width="56dp"
            android:layout_height="56dp" />

    </FrameLayout>

</LinearLayout>